[package]
name = "sexe"
version = "0.1.0"
authors = ["Jeremy Day <jadaytime@gmail.com>"]
edition = "2015"

[dependencies]
sexe_parser = { version = "0.1.0", path = "sexe-parser" }
sexe_expression = { version = "0.1.0", path = "sexe-expression" }
termion = "^1.5"
tui = "^0.5"

[workspace]
members = [
	"sexe-expression",
	"sexe-parser",
]

